[metadata]
name = openstack-helm-docs
summary = Documentation Repository for OpenStack-Helm
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstack-helm-docs/latest/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
